--- a/coursesUpravlenie2.html
+++ b/coursesUpravlenie2.html
@@ -759,6 +759,16 @@
                         </button>
                     </form>
                 </div>
+                <div class="courses__sorting">
+                    <form class="content__topbar-form" action="">
+                        <label for="">
+                            <span class="content__topbar-sorting">Сортировка:</span>
+                        </label>
+                        <select size="1" multiple name="">
+                            <option value="">по популярности</option>
+                        </select>
+                    </form>
+                </div>
                 <div class="table">
                     <div class="table__head">
                         <div class="table__item table__head-column table__head-column-1">Курс</div>
@@ -822,6 +832,16 @@
                         <button class="courses__search-btn btn" type="submit">
                             <span>Найти</span>
                         </button>
+                    </form>
+                </div>
+                <div class="courses__sorting">
+                    <form class="content__topbar-form" action="">
+                        <label for="">
+                            <span class="content__topbar-sorting">Сортировка:</span>
+                        </label>
+                        <select size="1" multiple name="">
+                            <option value="">по популярности</option>
+                        </select>
                     </form>
                 </div>
                 <div class="table">
