--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RB</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="header__wrapper">
             <div class="header__top">
                 <ul class="header__top-list">
-                    <li class="header__top-tem">
+                    <li class="header__top-item">
                         <a class="header__top-link" href="">RB.RU</a>
                     </li>
                     <li class="header__top-item">
@@ -29,15 +30,15 @@
                     <li class="header__top-item">
                         <a class="header__top-link" href="">PIPELINE</a>
                     </li>
-                    <li class="header__top-item">
-                        <a class="header__top-link header__top-link-active" href="">courses</a>
+                    <li class="header__top-item header__top-item-active">
+                        <a class="header__top-link" href="">courses</a>
                     </li>
                 </ul>
             </div>
             <div class="heading">
                 <div class="logo">
                     <a href="#">
-                        <img src="images/logo.png" alt="logo">
+                        <img src="images/logo.svg" alt="logo">
                     </a>
                 </div>
                 <nav class="menu" id="menuBox">
@@ -54,7 +55,8 @@
                         </div>
                         <div id="myDropdown" class="dropdown-content">
                             <div class="dropdown-content__left" id="dropdownContentL">
-                                <button onclick="listFunction()" class="dropdown-content__btn">
+                                <button onclick="listFunction()"
+                                    class="dropdown-content__btn dropdown-content__btn-active">
                                     Программирование
                                     <svg class="dropdown-content__btn-icon" width="9" height="14" viewBox="0 0 9 14"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -104,7 +106,7 @@
                                 </button>
                             </div>
                             <div class="dropdown-content__right" id="dropdownContentR">
-                                <button class="dropdown-content-right-back">
+                                <button class="dropdown-content-right-back" onclick="backDropdownContent()">
                                     <img class="dropdown-content-right-back-icon" src="images/arrow-back.svg"
                                         alt="back">
                                     <span class="dropdown-content-right-back-text">Назад</span>
@@ -145,7 +147,6 @@
             </div>
         </div>
     </header>
-
     <main class="main">
         <div class="container">
             <h1 class="title">
@@ -153,47 +154,60 @@
             </h1>
             <div class="categories">
                 <div class="categories__item">
-                    <div class="categories__wrapper">
-                        <img class="categories__image" src="images/directions1.jpg" alt="Программирование">
-                        <div class="categories__count">461 курс</div>
-                    </div>
+                    <a href="#" class="categories__link">
+                        <div class="categories__wrapper">
+                            <img class="categories__image" src="images/directions1.jpg" alt="Программирование">
+                            <div class="categories__count">461 курс</div>
+                        </div>
+                        <span class="categories__name">Программирование</span>
+                    </a>
+                </div>
+                <div class="categories__item">
+                    <a href="" class="categories__link">
+                        <div class="categories__wrapper">
+                            <img class="categories__image" src="images/directions2.jpg" alt="Управление">
+                            <div class="categories__count">425 курсов</div>
+                        </div>
+                        <span href="" class="categories__name">Управление</span>
+                    </a>
 
-                    <a href="" class="categories__name">Программирование</a>
                 </div>
                 <div class="categories__item">
-                    <div class="categories__wrapper">
-                        <img class="categories__image" src="images/directions2.jpg" alt="Управление">
-                        <div class="categories__count">425 курсов</div>
-                    </div>
-                    <a href="" class="categories__name">Управление</a>
+                    <a href="" class="categories__link">
+                        <div class="categories__wrapper">
+                            <img class="categories__image" src="images/directions3.jpg" alt="Дизайн">
+                            <div class="categories__count">345 курсов</div>
+                        </div>
+                        <span href="" class="categories__name">Дизайн</span>
+                    </a>
                 </div>
                 <div class="categories__item">
-                    <div class="categories__wrapper">
-                        <img class="categories__image" src="images/directions3.jpg" alt="Дизайн">
-                        <div class="categories__count">345 курсов</div>
-                    </div>
-                    <a href="" class="categories__name">Дизайн</a>
+                    <a href="" class="categories__link">
+                        <div class="categories__wrapper">
+                            <img class="categories__image" src="images/directions4.jpg" alt="Маркетинг">
+                            <div class="categories__count">211 курсов</div>
+                        </div>
+                        <span href="" class="categories__name">Маркетинг</span>
+                    </a>
                 </div>
                 <div class="categories__item">
-                    <div class="categories__wrapper">
-                        <img class="categories__image" src="images/directions4.jpg" alt="Маркетинг">
-                        <div class="categories__count">211 курсов</div>
-                    </div>
-                    <a href="" class="categories__name">Маркетинг</a>
+                    <a href="" class="categories__link">
+                        <div class="categories__wrapper">
+                            <img class="categories__image" src="images/directions5.jpg" alt="Аналитика">
+                            <div class="categories__count">348 курсов</div>
+                        </div>
+                        <span href="" class="categories__name">Аналитика</span>
+                    </a>
                 </div>
                 <div class="categories__item">
-                    <div class="categories__wrapper">
-                        <img class="categories__image" src="images/directions5.jpg" alt="Аналитика">
-                        <div class="categories__count">348 курсов</div>
-                    </div>
-                    <a href="" class="categories__name">Аналитика</a>
-                </div>
-                <div class="categories__item">
-                    <div class="categories__wrapper">
-                        <img class="categories__image" src="images/directions6.jpg" alt="Создание контента">
-                        <div class="categories__count">188 курсов</div>
-                    </div>
-                    <a href="" class="categories__name">Создание контента</a>
+                    <a href="" class="categories__link">
+                        <div class="categories__wrapper">
+                            <img class="categories__image" src="images/directions6.jpg" alt="Создание контента">
+                            <div class="categories__count">188 курсов</div>
+                        </div>
+                        <span href="" class="categories__name">Создание контента</span>
+                    </a>
+
                 </div>
             </div>
             <div class="caption">
@@ -220,16 +234,10 @@
                 </ul>
                 <ul class="footer__social">
                     <li class="footer__menu-item">
-                        <a href="" class="footer__social-item facebook">
-                        </a>
+                        <a href="" class="footer__social-item telegram"></a>
                     </li>
                     <li class="footer__menu-item">
-                        <a href="" class="footer__social-item telegram">
-                        </a>
-                    </li>
-                    <li class="footer__menu-item">
-                        <a href="" class="footer__social-item vkontakte">
-                        </a>
+                        <a href="" class="footer__social-item vkontakte"></a>
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item twitter">
@@ -240,9 +248,6 @@
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item odnoklassniki"></a>
-                    </li>
-                    <li class="footer__menu-item">
-                        <a href="" class="footer__social-item instagram"></a>
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item tiktok"> </a>
@@ -259,15 +264,13 @@
                 </p>
             </div>
             <div class="footer__bottom">
-                <div class="footer__copyright"> © 2022 coursator.online</div>
-                <p class="footer__text"> Политика конфиденциальности</p>
-                <p class="footer__text">Пользовательское соглашение</p>
+                <div class="footer__copyright">© 2022 coursator.online</div>
+                <a class="footer__text" href="">Политика конфиденциальности</a>
+                <a class="footer__text" href="">Пользовательское соглашение</a>
 
             </div>
         </div>
-
     </footer>
-
     <script src="js/main.min.js"></script>
 </body>
 
