--- a/reviews2.html
+++ b/reviews2.html
@@ -11,10 +11,10 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="header__wrapper">
             <div class="header__top">
                 <ul class="header__top-list">
-                    <li class="header__top-tem">
+                    <li class="header__top-item">
                         <a class="header__top-link" href="">RB.RU</a>
                     </li>
                     <li class="header__top-item">
@@ -29,15 +29,15 @@
                     <li class="header__top-item">
                         <a class="header__top-link" href="">PIPELINE</a>
                     </li>
-                    <li class="header__top-item">
-                        <a class="header__top-link header__top-link-active" href="">courses</a>
+                    <li class="header__top-item header__top-item-active">
+                        <a class="header__top-link" href="">courses</a>
                     </li>
                 </ul>
             </div>
             <div class="heading">
                 <div class="logo">
                     <a href="#">
-                        <img src="images/logo.png" alt="logo">
+                        <img src="images/logo.svg" alt="logo">
                     </a>
                 </div>
                 <nav class="menu" id="menuBox">
@@ -54,7 +54,8 @@
                         </div>
                         <div id="myDropdown" class="dropdown-content">
                             <div class="dropdown-content__left" id="dropdownContentL">
-                                <button onclick="listFunction()" class="dropdown-content__btn">
+                                <button onclick="listFunction()"
+                                    class="dropdown-content__btn dropdown-content__btn-active">
                                     Программирование
                                     <svg class="dropdown-content__btn-icon" width="9" height="14" viewBox="0 0 9 14"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -163,11 +164,6 @@
                 <h1 class="title">
                     Отзывы об онлайн-школах
                 </h1>
-                <div class="content__box-top">
-                    <img src="images/star.svg" alt="star">
-                    <a class="content__box-rating" href="">4</a>
-                    <a class="content__box-reviews" href="">(19)</a>
-                </div>
             </div>
             <p class="inner__text">
                 Предоставив возможность ученикам цифровых образовательных платформ поделиться впечатлениями об обучении,
@@ -180,7 +176,9 @@
                     <div class="reviews__content-item">
                         <div class="reviews__content-in">
                             <div class="reviews__content-left">
-                                <img src="images/school-skill.png" alt="">
+                                <a href="">
+                                    <img src="images/school-skill.png" alt="school">
+                                </a>
                                 <div class="content__box-top">
                                     <img src="images/star.svg" alt="star">
                                     <a class="content__box-rating" href="">4</a>
@@ -188,7 +186,7 @@
                                 </div>
                             </div>
                             <div class="reviews__content-right">
-                                <div class="reviews__content-nameSchool">Skillbox</div>
+                                <a href="" class="reviews__content-nameSchool">Skillbox</a>
                                 <div class="reviews__content-text">Одна из самых масштабных онлайн-школ, большой выбор
                                     образовательных программ.
                                     Преподаватели школы — профессионалы в своей области. Заинтересованы в получении
@@ -204,7 +202,9 @@
                     <div class="reviews__content-item">
                         <div class="reviews__content-in">
                             <div class="reviews__content-left">
-                                <img src="images/school-skill.png" alt="">
+                                <a href="">
+                                    <img src="images/school-skill.png" alt="school">
+                                </a>
                                 <div class="content__box-top">
                                     <img src="images/star.svg" alt="star">
                                     <a class="content__box-rating" href="">4</a>
@@ -212,7 +212,7 @@
                                 </div>
                             </div>
                             <div class="reviews__content-right">
-                                <div class="reviews__content-nameSchool">Skillbox</div>
+                                <a href="" class="reviews__content-nameSchool">Skillbox</a>
                                 <div class="reviews__content-text">Одна из самых масштабных онлайн-школ, большой выбор
                                     образовательных программ.
                                     Преподаватели школы — профессионалы в своей области. Заинтересованы в получении
@@ -228,7 +228,9 @@
                     <div class="reviews__content-item">
                         <div class="reviews__content-in">
                             <div class="reviews__content-left">
-                                <img src="images/school-skill.png" alt="">
+                                <a href="">
+                                    <img src="images/school-skill.png" alt="school">
+                                </a>
                                 <div class="content__box-top">
                                     <img src="images/star.svg" alt="star">
                                     <a class="content__box-rating" href="">4</a>
@@ -236,7 +238,7 @@
                                 </div>
                             </div>
                             <div class="reviews__content-right">
-                                <div class="reviews__content-nameSchool">Skillbox</div>
+                                <a href="" class="reviews__content-nameSchool">Skillbox</a>
                                 <div class="reviews__content-text">Одна из самых масштабных онлайн-школ, большой выбор
                                     образовательных программ.
                                     Преподаватели школы — профессионалы в своей области. Заинтересованы в получении
@@ -252,7 +254,9 @@
                     <div class="reviews__content-item">
                         <div class="reviews__content-in">
                             <div class="reviews__content-left">
-                                <img src="images/school-skill.png" alt="">
+                                <a href="">
+                                    <img src="images/school-skill.png" alt="school">
+                                </a>
                                 <div class="content__box-top">
                                     <img src="images/star.svg" alt="star">
                                     <a class="content__box-rating" href="">4</a>
@@ -260,7 +264,7 @@
                                 </div>
                             </div>
                             <div class="reviews__content-right">
-                                <div class="reviews__content-nameSchool">Skillbox</div>
+                                <a href="" class="reviews__content-nameSchool">Skillbox</a>
                                 <div class="reviews__content-text">Одна из самых масштабных онлайн-школ, большой выбор
                                     образовательных программ.
                                     Преподаватели школы — профессионалы в своей области. Заинтересованы в получении
@@ -337,10 +341,10 @@
                 <div class="footer-copyright"> © 2022 coursator.online</div>
                 <p class="footer__text"> Политика конфиденциальности</p>
                 <p class="footer__text">Пользовательское соглашение</p>
-
             </div>
         </div>
     </footer>
+    <script src="js/main.min.js"></script>
 </body>
 
 </html>
