--- a/coursesUpravlenie2.html
+++ b/coursesUpravlenie2.html
@@ -339,7 +339,7 @@
                         tabindex="-1" aria-hidden="true">
                         <option value="">Управление</option>
                     </select>
-                    <button class="btn" type="submit"><span>Искать</span></button>
+                    <button class="btn btn__find" type="submit"><span>Искать</span></button>
                 </form>
                 <div class="filters__container">
                     <aside class="sidebar">
