footer and all-cat

--- a/coursesUpravlenie.html
+++ b/coursesUpravlenie.html
@@ -205,7 +205,7 @@
                         <a class="breadcrumb__list-link" href="#">Главная</a>
                     </li>
                     <li class="breadcrumb__list-item">
-                        <a class="breadcrumb__list-link" href="#">Акции</a>
+                        <a class="breadcrumb__list-link" href="#">Курсы</a>
                     </li>
                 </ul>
             </div>
@@ -220,7 +220,10 @@
                     <a href="" class="courses__link">HR и управление персоналом</a>
                     <a href="" class="courses__link">Управление бизнесом</a>
                     <a href="" class="courses__link">Финансовая аналитика</a>
-
+                    <a href="" class="courses__link">Product-менеджмент</a>
+                    <a href="" class="courses__link">HR и управление персоналом</a>
+                    <a href="" class="courses__link">Управление бизнесом</a>
+                    <a href="" class="courses__link">Финансовая аналитика</a>
                 </div>
                 <button class="courses__all" onclick="coursesAllFunction()">все категории</button>
                 <div class="courses__anchors">
@@ -1039,16 +1042,10 @@
                 </ul>
                 <ul class="footer__social">
                     <li class="footer__menu-item">
-                        <a href="" class="footer__social-item facebook">
-                        </a>
+                        <a href="" class="footer__social-item telegram"></a>
                     </li>
                     <li class="footer__menu-item">
-                        <a href="" class="footer__social-item telegram">
-                        </a>
-                    </li>
-                    <li class="footer__menu-item">
-                        <a href="" class="footer__social-item vkontakte">
-                        </a>
+                        <a href="" class="footer__social-item vkontakte"></a>
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item twitter">
@@ -1059,9 +1056,6 @@
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item odnoklassniki"></a>
-                    </li>
-                    <li class="footer__menu-item">
-                        <a href="" class="footer__social-item instagram"></a>
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item tiktok"> </a>
@@ -1078,9 +1072,9 @@
                 </p>
             </div>
             <div class="footer__bottom">
-                <div class="footer-copyright"> © 2022 coursator.online</div>
-                <p class="footer__text"> Политика конфиденциальности</p>
-                <p class="footer__text">Пользовательское соглашение</p>
+                <div class="footer__copyright">© 2022 coursator.online</div>
+                <a class="footer__text" href="">Политика конфиденциальности</a>
+                <a class="footer__text" href="">Пользовательское соглашение</a>
 
             </div>
         </div>
