--- a/coursesUpravlenie2.html
+++ b/coursesUpravlenie2.html
@@ -339,7 +339,7 @@
                         tabindex="-1" aria-hidden="true">
                         <option value="">Управление</option>
                     </select>
-                    <button class="btn btn__find" type="submit"><span>Искать</span></button>
+                    <button class="btn" type="submit"><span>Искать</span></button>
                 </form>
                 <div class="filters__container">
                     <aside class="sidebar">
@@ -1029,16 +1029,10 @@
                 </ul>
                 <ul class="footer__social">
                     <li class="footer__menu-item">
-                        <a href="" class="footer__social-item facebook">
-                        </a>
+                        <a href="" class="footer__social-item telegram"></a>
                     </li>
                     <li class="footer__menu-item">
-                        <a href="" class="footer__social-item telegram">
-                        </a>
-                    </li>
-                    <li class="footer__menu-item">
-                        <a href="" class="footer__social-item vkontakte">
-                        </a>
+                        <a href="" class="footer__social-item vkontakte"></a>
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item twitter">
@@ -1049,9 +1043,6 @@
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item odnoklassniki"></a>
-                    </li>
-                    <li class="footer__menu-item">
-                        <a href="" class="footer__social-item instagram"></a>
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item tiktok"> </a>
@@ -1068,13 +1059,12 @@
                 </p>
             </div>
             <div class="footer__bottom">
-                <div class="footer-copyright"> © 2022 coursator.online</div>
-                <p class="footer__text"> Политика конфиденциальности</p>
-                <p class="footer__text">Пользовательское соглашение</p>
+                <div class="footer__copyright">© 2022 coursator.online</div>
+                <a class="footer__text" href="">Политика конфиденциальности</a>
+                <a class="footer__text" href="">Пользовательское соглашение</a>
 
             </div>
         </div>
     </footer>
-
     <script src="js/main.min.js"></script>
 </body>
