--- a/testPage2.html
+++ b/testPage2.html
@@ -222,16 +222,10 @@
                 </ul>
                 <ul class="footer__social">
                     <li class="footer__menu-item">
-                        <a href="" class="footer__social-item facebook">
-                        </a>
+                        <a href="" class="footer__social-item telegram"></a>
                     </li>
                     <li class="footer__menu-item">
-                        <a href="" class="footer__social-item telegram">
-                        </a>
-                    </li>
-                    <li class="footer__menu-item">
-                        <a href="" class="footer__social-item vkontakte">
-                        </a>
+                        <a href="" class="footer__social-item vkontakte"></a>
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item twitter">
@@ -242,9 +236,6 @@
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item odnoklassniki"></a>
-                    </li>
-                    <li class="footer__menu-item">
-                        <a href="" class="footer__social-item instagram"></a>
                     </li>
                     <li class="footer__menu-item">
                         <a href="" class="footer__social-item tiktok"> </a>
@@ -261,15 +252,13 @@
                 </p>
             </div>
             <div class="footer__bottom">
-                <div class="footer-copyright"> © 2022 coursator.online</div>
-                <p class="footer__text"> Политика конфиденциальности</p>
-                <p class="footer__text">Пользовательское соглашение</p>
+                <div class="footer__copyright">© 2022 coursator.online</div>
+                <a class="footer__text" href="">Политика конфиденциальности</a>
+                <a class="footer__text" href="">Пользовательское соглашение</a>
 
             </div>
         </div>
-
     </footer>
-
     <script src="js/main.min.js"></script>
 </body>
 
